@@ -1,1 +1,3 @@
 # Javafx_Project
+
+--module-path "Path" --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.media
